--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "mtl-file-parser",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Material Template Library File (.MTL) Parser",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "directories": {
     "test": "tests"
   },
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/WesUnwin/mtl-file-parser.git"
+    "url": "git+https://github.com/girogio/mtl-file-parser.git"
   },
   "keywords": [
     "MTL",
@@ -23,13 +28,21 @@
     "obj",
     "parser"
   ],
-  "author": "Wesley Unwin <wes_unwin@hotmail.com>",
+  "authors": [
+    "Wesley Unwin <wes_unwin@hotmail.com>",
+    "Giorgio Grigolo <giorgio@grigolo.mt>"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/WesUnwin/mtl-file-parser/issues"
+    "url": "https://github.com/girogio/mtl-file-parser/issues"
   },
-  "homepage": "https://github.com/WesUnwin/mtl-file-parser#readme",
+  "homepage": "https://github.com/girogio/mtl-file-parser#readme",
+  "dependencies": {
+    "jest": "^29.7.0"
+  },
   "devDependencies": {
-    "jest": "^20.0.4"
+    "eslint": "^9.13.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
